--- a/src/components/TokenAlert/tokenAlert.scss
+++ b/src/components/TokenAlert/tokenAlert.scss
@@ -1,7 +1,9 @@
-img.token-alert {
-  margin-left: 4px;
-  width: 16px !important;
-  height: 16px !important;
-  display: inline-block;
-  margin-bottom: -2px;
+.swap__container, .p-dialog-mask.p-component-overlay {
+  img.token-alert {
+    margin-left: 4px;
+    width: 16px !important;
+    height: 16px !important;
+    display: inline-block;
+    margin-bottom: -2px;
+  }
 }
