--- a/src/components/ConnectWalletDialog/connectWalletDialog.scss
+++ b/src/components/ConnectWalletDialog/connectWalletDialog.scss
@@ -1,141 +1,143 @@
-.text {
-  margin-top: 0;
-  color: rgba(251, 250, 255, 0.6);
-}
+.p-dialog-mask.p-component-overlay{
+  .text {
+    margin-top: 0;
+    color: rgba(251, 250, 255, 0.6);
+  }
 
-.image-link {
-  display: block;
-}
+  .image-link {
+    display: block;
+  }
 
-.help {
-  color: transparentize(#e5e4fa, 0.6);
-  font-size: 13px;
-  font-weight: 500;
+  .help {
+    color: transparentize(#e5e4fa, 0.6);
+    font-size: 13px;
+    font-weight: 500;
 
-  a {
-    color: transparentize(#e5e4fa, 0.2);
+    a {
+      color: transparentize(#e5e4fa, 0.2);
 
-    &:hover {
-      text-decoration: underline;
+      &:hover {
+        text-decoration: underline;
+      }
     }
   }
-}
 
-.modal__title {
-  font-size: 20px;
-  line-height: 24px;
-  font-weight: 600;
-  text-align: center;
-  width: 100%;
-  margin: 0 0 0 16px;
-}
-
-.connect__wrapper {
-  .connect {
-    width: min-content;
-    margin: 0;
-    border-radius: 12px;
-    background-color: #28253e;
-    min-height: 64px;
-    font-size: 17px;
+  .modal__title {
+    font-size: 20px;
     line-height: 24px;
     font-weight: 600;
-    animation: fade ease-in-out 0.15s;
-    &:hover {
-      background-color: #33284f;
+    text-align: center;
+    width: 100%;
+    margin: 0 0 0 16px;
+  }
+
+  .connect__wrapper {
+    .connect {
+      width: min-content;
+      margin: 0;
+      border-radius: 12px;
+      background-color: #28253e;
+      min-height: 64px;
+      font-size: 17px;
+      line-height: 24px;
+      font-weight: 600;
+      animation: fade ease-in-out 0.15s;
+      &:hover {
+        background-color: #33284f;
+        border: none;
+        outline: none;
+        color: white;
+      }
+      &:focus {
+        box-shadow: 0 0 0 2px #1c2127, 0 0 0 2px rgb(196 181 253 / 70%) inset,
+        0 1px 2px 0 rgb(0 0 0 / 0%);
+      }
       border: none;
       outline: none;
-      color: white;
-    }
-    &:focus {
-      box-shadow: 0 0 0 2px #1c2127, 0 0 0 2px rgb(196 181 253 / 70%) inset,
-      0 1px 2px 0 rgb(0 0 0 / 0%);
-    }
-    border: none;
-    outline: none;
-    &__description {
-      display: flex;
-      justify-content: space-between;
-      width: 100%;
-      align-items: center;
-    }
-    &__title {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    &__caption {
-      font-size: 13px;
-      line-height: 24px;
-      color: #9594aa;
-      font-weight: 400;
-      text-align: left;
-      display: flex;
-      align-items: center;
-    }
-    &__badge {
-      width: 109px;
-    }
-    &__wallet-image {
-      display: flex;
-      width: 100%;
-      justify-content: center;
-      align-items: center;
-    }
-    &__auditor {
-      width: 82px;
-      margin-left: 0.25em;
+      &__description {
+        display: flex;
+        justify-content: space-between;
+        width: 100%;
+        align-items: center;
+      }
+      &__title {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      &__caption {
+        font-size: 13px;
+        line-height: 24px;
+        color: #9594aa;
+        font-weight: 400;
+        text-align: left;
+        display: flex;
+        align-items: center;
+      }
+      &__badge {
+        width: 109px;
+      }
+      &__wallet-image {
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
+      }
+      &__auditor {
+        width: 82px;
+        margin-left: 0.25em;
+      }
     }
   }
-}
 
-.connect-dialog {
-  align-items: flex-start;
-}
-
-.divider {
-  opacity: 0.15;
-  border-bottom: 1px solid var(--text-color);
-  margin: 0 -24px 24px;
-}
-
-.store__link {
-  display: flex;
-  margin-bottom: 24px;
-}
-
-.wallet-logo {
-  height: 36px;
-  width: auto;
-}
-
-.chevron {
-  border-radius: 50px;
-  height: 36px;
-  width: 36px;
-  background-color: #3e3e52;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.other-wallets__button:focus {
-  box-shadow: none;
-}
-
-.block--scrollable {
-  overflow-y: auto;
-  height: 100%;
-  max-height: calc(100vh - 451px);
-}
-
-@keyframes fade {
-  0% {
-    opacity: 0;
-    transform: translate(0, -50%);
+  .connect-dialog {
+    align-items: flex-start;
   }
-  100% {
-    opacity: 1;
-    transform: translate(0, 0);
+
+  .divider {
+    opacity: 0.15;
+    border-bottom: 1px solid var(--ls-text-color);
+    margin: 0 -24px 24px;
+  }
+
+  .store__link {
+    display: flex;
+    margin-bottom: 24px;
+  }
+
+  .wallet-logo {
+    height: 36px;
+    width: auto;
+  }
+
+  .chevron {
+    border-radius: 50px;
+    height: 36px;
+    width: 36px;
+    background-color: #3e3e52;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .other-wallets__button:focus {
+    box-shadow: none;
+  }
+
+  .block--scrollable {
+    overflow-y: auto;
+    height: 100%;
+    max-height: calc(100vh - 451px);
+  }
+
+  @keyframes fade {
+    0% {
+      opacity: 0;
+      transform: translate(0, -50%);
+    }
+    100% {
+      opacity: 1;
+      transform: translate(0, 0);
+    }
   }
 }
