--- a/src/components/InvalidNetworkDialog/invalidNetworkDialog.scss
+++ b/src/components/InvalidNetworkDialog/invalidNetworkDialog.scss
@@ -1,23 +1,25 @@
-.send-button {
-  width: 100%;
-  margin-top: 10px;
-}
-
-.step {
-  ::v-deep(.p-blockui) {
-    opacity: 0;
+.p-dialog-mask.p-component-overlay {
+  .send-button {
+    width: 100%;
+    margin-top: 10px;
   }
-}
 
-.p-dialog-content {
-  p {
-    margin-top: 0;
-    line-height: 1.4;
+  .step {
+    ::v-deep(.p-blockui) {
+      opacity: 0;
+    }
   }
-}
 
-.account-exit {
-  font-weight: 500;
-  font-size: 17px;
-  padding: 15px 24px;
+  .p-dialog-content {
+    p {
+      margin-top: 0;
+      line-height: 1.4;
+    }
+  }
+
+  .account-exit {
+    font-weight: 500;
+    font-size: 17px;
+    padding: 15px 24px;
+  }
 }
