--- a/src/components/Steps/SendTransaction/confirmTransaction.scss
+++ b/src/components/Steps/SendTransaction/confirmTransaction.scss
@@ -1,21 +1,23 @@
-.confirmation {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.p-dialog-mask.p-component-overlay {
+  .confirmation {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  &__title {
-    font-size: 20px;
-    margin-top: 24px;
-    margin-bottom: 0px;
-    color: var(--text-color);
-    font-weight: 800;
-  }
+    &__title {
+      font-size: 20px;
+      margin-top: 24px;
+      margin-bottom: 0px;
+      color: var(--ls-text-color);
+      font-weight: 800;
+    }
 
-  &__help {
-    margin-top: 24px;
-    margin-bottom: 24px;
-    color: var(--text-color);
-    opacity: 0.4;
-    font-size: 13px;
+    &__help {
+      margin-top: 24px;
+      margin-bottom: 24px;
+      color: var(--ls-text-color);
+      opacity: 0.4;
+      font-size: 13px;
+    }
   }
 }
