--- a/src/components/Steps/SendTransaction/submitTransaction.scss
+++ b/src/components/Steps/SendTransaction/submitTransaction.scss
@@ -1,78 +1,80 @@
-.submit {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.p-dialog-mask.p-component-overlay {
+  .submit {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-  &__title {
-    font-size: 20px;
-    margin-top: 24px;
-    margin-bottom: 0px;
-    color: var(--text-color);
-    font-weight: 800;
-  }
+    &__title {
+      font-size: 20px;
+      margin-top: 24px;
+      margin-bottom: 0px;
+      color: var(--ls-text-color);
+      font-weight: 800;
+    }
 
-  &__description {
-    color: var(--text-color);
-    opacity: 0.7;
-    font-size: 17px;
-    margin-bottom: 0;
-    margin-top: 10px;
-  }
+    &__description {
+      color: var(--ls-text-color);
+      opacity: 0.7;
+      font-size: 17px;
+      margin-bottom: 0;
+      margin-top: 10px;
+    }
 
-  &__error {
-    color: #f03f77;
-    text-align: center;
-    line-height: 1.5rem;
-    width: 80%;
-    &::first-letter {
-      text-transform: uppercase;
+    &__error {
+      color: #f03f77;
+      text-align: center;
+      line-height: 1.5rem;
+      width: 80%;
+      &::first-letter {
+        text-transform: uppercase;
+      }
     }
   }
-}
 
-.tx-hash {
-  width: 100%;
-
-  .p-button {
-    width: 20px !important;
-    height: 20px !important;
-    padding: 0px 0px 0px 5px;
-    margin-left: auto;
-  }
-}
-
-.tx-result {
-  width: 100%;
-  border-radius: 16px;
-  border: 1px solid transparentize(#e5e4fa, 0.85);
-
-  margin-top: 10px;
-
-  .tx-result__row {
-    display: flex;
-  }
-
-  .tx-result__row:not(:last-child) {
-    border-bottom: 1px solid transparentize(#e5e4fa, 0.85);
-  }
-
-  .tx-result__field {
-    padding: 16px 16px 0;
+  .tx-hash {
     width: 100%;
+
+    .p-button {
+      width: 20px !important;
+      height: 20px !important;
+      padding: 0px 0px 0px 5px;
+      margin-left: auto;
+    }
   }
 
-  .tx-result__label {
-    white-space: nowrap;
-    font-size: 13px;
-    color: transparentize(#e5e4fa, 0.5);
-    font-weight: 500;
-    margin-bottom: 8px;
-  }
+  .tx-result {
+    width: 100%;
+    border-radius: 16px;
+    border: 1px solid transparentize(#e5e4fa, 0.85);
 
-  .tx-result__value {
-    font-size: 17px;
-    padding-bottom: 16px;
-    color: #e5e4fa;
-    overflow: auto;
+    margin-top: 10px;
+
+    .tx-result__row {
+      display: flex;
+    }
+
+    .tx-result__row:not(:last-child) {
+      border-bottom: 1px solid transparentize(#e5e4fa, 0.85);
+    }
+
+    .tx-result__field {
+      padding: 16px 16px 0;
+      width: 100%;
+    }
+
+    .tx-result__label {
+      white-space: nowrap;
+      font-size: 13px;
+      color: transparentize(#e5e4fa, 0.5);
+      font-weight: 500;
+      margin-bottom: 8px;
+    }
+
+    .tx-result__value {
+      font-size: 17px;
+      padding-bottom: 16px;
+      color: #e5e4fa;
+      overflow: auto;
+    }
   }
 }
