--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -29,13 +29,32 @@ liquidswap-widget {
     #0e0824 44.79%,
     #0a081e 59.58%
   );
-  color: var(--text-color);
+  color: var(--ls-text-color);
   padding: 0;
   margin: 0 auto;
   -moz-osx-font-smoothing: grayscale;
 
   &.layout-scroll-block {
     overflow: hidden;
+  }
+
+  a {
+    text-decoration: none;
+  }
+
+  p {
+    color: var(--ls-text-color);
+  }
+
+  .onboarding-icon {
+    display: inline-block;
+    width: 1rem;
+    background: url('../assets/union.svg') 0 0/contain no-repeat;
+    &::before {
+      content: "";
+      display: block;
+      padding-top: 100%;
+    }
   }
 }
 
@@ -44,29 +63,9 @@ liquidswap-widget {
   width: 100%;
 }
 
-a {
-  text-decoration: none;
-}
-
-p {
-  color: var(--text-color);
-}
-
-.onboarding-icon {
-  display: inline-block;
-  width: 1rem;
-  background: url('../assets/union.svg') 0 0/contain no-repeat;
-  &::before {
-  content: "";
-    display: block;
-    padding-top: 100%;
-  }
-}
-
 :root {
-  //--text-color:#495057;
-  --text-color: #e5e4fa;
-  --text-color-secondary: #6c757d; //9292A8
+  --ls-text-color: #e5e4fa;
+  --ls-text-color-secondary: #6c757d; //9292A8
   --primary-color: #6e42ca;
   --primary-color-text: #ffffff;
   --accent-success: #039581;
@@ -78,7 +77,7 @@ p {
   --surface-0: #ffffff;
   --surface-50: #fafafa;
   --surface-100: #f5f5f5;
-  --surface-200: #eeeeee;
+  --ls-surface-200: #eeeeee;
   --surface-300: #e0e0e0;
   --surface-400: #bdbdbd;
   --surface-500: #9e9e9e;
@@ -237,410 +236,407 @@ p {
 
 }
 
-.p-component {
-  font-family: var(--font-family);
-}
-
-.p-overlaypanel {
-  background: rgb(25, 27, 31);
-  border: 1px solid rgb(33, 36, 41);
-  box-shadow: rgb(0 0 0 / 5%) 0px 4px 8px 0px;
-
-  &::before,
-  &::after {
-    display: none;
+.p-dialog-mask.p-component-overlay, .swap__container {
+  .p-component {
+    font-family: var(--font-family);
   }
-}
 
-.p-dialog {
-  border: none;
-  box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px,
+  .p-overlaypanel {
+    background: rgb(25, 27, 31);
+    border: 1px solid rgb(33, 36, 41);
+    box-shadow: rgb(0 0 0 / 5%) 0px 4px 8px 0px;
+
+    &::before,
+    &::after {
+      display: none;
+    }
+  }
+
+  .p-dialog {
+    border: none;
+    box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px,
     rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px 32px;
 
-  .p-dialog-header {
-    background: var(--surface-card);
-    color: var(--text-color);
-    border: none;
-    border-top-left-radius: 24px !important;
-    border-top-right-radius: 24px !important;
+    .p-dialog-header {
+      background: var(--surface-card);
+      color: var(--ls-text-color);
+      border: none;
+      border-top-left-radius: 24px !important;
+      border-top-right-radius: 24px !important;
+    }
+
+    .p-dialog-content {
+      background: var(--surface-card);
+      border: none;
+      border-bottom-left-radius: 24px !important;
+      border-bottom-right-radius: 24px !important;
+    }
   }
 
-  .p-dialog-content {
-    background: var(--surface-card);
-    border: none;
-    border-bottom-left-radius: 24px !important;
-    border-bottom-right-radius: 24px !important;
-  }
-}
-
-.account {
-  .p-dialog-header {
-    padding: 1rem;
-    padding-top: 24px;
-  }
-  .p-dialog-content {
-    padding: 1rem;
-  }
-}
-
-.p-menu {
-  margin-top: 10px;
-  &.p-menu-overlay {
-    overflow: hidden !important;
-    border: 0;
-    border-radius: 24px;
-    min-width: 230px !important;
-    background: var(--surface-card);
-    box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px,
+  .p-menu {
+    margin-top: 10px;
+    &.p-menu-overlay {
+      overflow: hidden !important;
+      border: 0;
+      border-radius: 24px;
+      min-width: 230px !important;
+      background: var(--surface-card);
+      box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px,
       rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px 32px;
+    }
   }
-}
 
-.p-inputtext {
-  background: #24243a;
-  padding: 0.75rem 0.75rem;
-  border: 1px solid var(--surface-card);
-  transition: background-color 0.2s, color 0.2s, border-color 0.2s,
+  .p-inputtext {
+    background: #24243a;
+    padding: 0.75rem 0.75rem;
+    border: 1px solid var(--surface-card);
+    transition: background-color 0.2s, color 0.2s, border-color 0.2s,
     box-shadow 0.2s;
-  appearance: none;
-  border-radius: 6px;
+    appearance: none;
+    border-radius: 6px;
 
-  &.p-invalid.p-component {
-    border-color: #ca4242 !important;
+    &.p-invalid.p-component {
+      border-color: #ca4242 !important;
+    }
   }
-}
-.p-inputtext:enabled:hover {
-  border-color: #c4b5fd;
-}
-.p-inputtext:enabled:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem rgba(196, 181, 253, 0.5);
-  border-color: #c4b5fd;
-}
-.p-inputtext.p-invalid.p-component {
-  border-color: #fca5a5;
-}
-.p-inputtext.p-inputtext-sm {
-  font-size: 0.875rem;
-  padding: 0.65625rem 0.65625rem;
-}
-.p-inputtext.p-inputtext-lg {
-  font-size: 1.25rem;
-  padding: 0.9375rem 0.9375rem;
-}
-
-.p-toast-detail {
-  white-space: break-spaces;
-  word-break: break-word;
-}
-
-.p-inline-message {
-  border-radius: 16px;
-  font-weight: 400;
-  &.p-inline-message-error {
-    background: rgba(#ca4242, 0.2);
-    border-color: #ca4242;
+  .p-inputtext:enabled:hover {
+    border-color: #c4b5fd;
+  }
+  .p-inputtext:enabled:focus {
+    outline: 0 none;
+    outline-offset: 0;
+    box-shadow: 0 0 0 0.2rem rgba(196, 181, 253, 0.5);
+    border-color: #c4b5fd;
+  }
+  .p-inputtext.p-invalid.p-component {
+    border-color: #fca5a5;
+  }
+  .p-inputtext.p-inputtext-sm {
+    font-size: 0.875rem;
+    padding: 0.65625rem 0.65625rem;
+  }
+  .p-inputtext.p-inputtext-lg {
+    font-size: 1.25rem;
+    padding: 0.9375rem 0.9375rem;
   }
 
-  &.p-inline-message-warn {
-    background: rgba(#F6851B, 0.2);
-    border-color: #F6851B;
+  .p-toast-detail {
+    white-space: break-spaces;
+    word-break: break-word;
   }
 
-  &.p-inline-message-info {
-    background-color: rgba(110, 66, 202, 0.2);
-    border-color: #6e42ca;
+  .p-inline-message {
+    border-radius: 16px;
+    font-weight: 400;
+    &.p-inline-message-error {
+      background: rgba(#ca4242, 0.2);
+      border-color: #ca4242;
+    }
 
-    .p-inline-message-icon {
-      color: #8557e7;
+    &.p-inline-message-warn {
+      background: rgba(#F6851B, 0.2);
+      border-color: #F6851B;
+    }
+
+    &.p-inline-message-info {
+      background-color: rgba(110, 66, 202, 0.2);
+      border-color: #6e42ca;
+
+      .p-inline-message-icon {
+        color: #8557e7;
+      }
+    }
+
+    .p-inline-message-text {
+      font-size: 0.9375rem;
+      color: var(--ls-text-color);
     }
   }
 
-  .p-inline-message-text {
-    font-size: 0.9375rem;
-    color: var(--text-color);
-  }
-}
+  .p-message {
+    &.p-message-warn {
+      background: #2d2116;
+      border: solid #cc8925;
+      border-width: 0 0 0 6px;
+      color: #cc8925;
+    }
 
-.p-message {
-  &.p-message-warn {
-    background: #2d2116;
-    border: solid #cc8925;
-    border-width: 0 0 0 6px;
-    color: #cc8925;
-  }
+    &.p-message-info {
+      background: #262647;
+      border: solid var(--primary-color);
+      border-width: 0 0 0 6px;
+      color: var(--ls-text-color);
 
-  &.p-message-info {
-    background: #262647;
-    border: solid var(--primary-color);
-    border-width: 0 0 0 6px;
-    color: var(--text-color);
-
-    .p-message-icon {
-      color: var(--text-color);
+      .p-message-icon {
+        color: var(--ls-text-color);
+      }
     }
   }
-}
 
-.p-button {
-  color: white;
-  background: var(--primary-color);
-  border: 1px solid var(--primary-color);
-  padding: 0.75rem 1.25rem;
-  font-size: 1rem;
-  transition: background-color 0.2s, color 0.2s, border-color 0.2s,
-    box-shadow 0.2s;
-  border-radius: 16px;
-
-  .p-button-label {
-    font-weight: 500;
-  }
-  &.p-button-secondary {
-    background: #1c1c33;
-    border-color: #1c1c33;
-    color: var(--gray-300);
-    &:enabled:hover {
-      background: lighten(#1c1c33, 5%);
-      border-color: #1c1c33;
-      color: var(--gray-50);
-    }
-    &:enabled:focus {
-      box-shadow: none;
-    }
-  }
-}
-.p-button:enabled:hover {
-  background: #b3a0fc;
-  color: #1c2127;
-  border-color: #b3a0fc;
-}
-.p-button:enabled:active {
-  background: #a28bfc;
-  color: #1c2127;
-  border-color: #a28bfc;
-}
-
-.p-dialog-mask {
-  z-index: 1000 !important;
-  background-color: rgba(0, 0, 0, 0.4) !important;
-}
-
-.p-overlaypanel {
-  border: 0;
-  border-radius: 0;
-  background: transparent;
-  box-shadow: none;
-  z-index: 3;
-  padding: 6px 16px;
-
-  .p-overlaypanel-content {
-    border-radius: 24px;
-    background: #1e1e30;
-    box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px,
-      rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px 32px;
-  }
-}
-
-.p-button {
-  color: white;
-  background: var(--primary-color);
-  border: 1px solid var(--primary-color);
-  border-radius: 100px;
-  padding: 0.75rem 1.25rem;
-  font-size: 1rem;
-  font-weight: 500;
-
-  .p-button-label {
-    font-weight: 500;
-  }
-
-  &:disabled {
-    opacity: 0.5;
-  }
-
-  &.p-button-secondary {
-    background: #43395b;
+  .p-button {
     color: white;
-    border-width: 0px;
+    background: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    padding: 0.75rem 1.25rem;
+    font-size: 1rem;
+    transition: background-color 0.2s, color 0.2s, border-color 0.2s,
+    box-shadow 0.2s;
+    border-radius: 16px;
+
+    .p-button-label {
+      font-weight: 500;
+    }
+    &.p-button-secondary {
+      background: #1c1c33;
+      border-color: #1c1c33;
+      color: var(--gray-300);
+      &:enabled:hover {
+        background: lighten(#1c1c33, 5%);
+        border-color: #1c1c33;
+        color: var(--gray-50);
+      }
+      &:enabled:focus {
+        box-shadow: none;
+      }
+    }
+  }
+  .p-button:enabled:hover {
+    background: #b3a0fc;
+    color: #1c2127;
+    border-color: #b3a0fc;
+  }
+  .p-button:enabled:active {
+    background: #a28bfc;
+    color: #1c2127;
+    border-color: #a28bfc;
+  }
+
+  .p-dialog-mask {
+    z-index: 1000 !important;
+    background-color: rgba(0, 0, 0, 0.4) !important;
+  }
+
+  .p-overlaypanel {
+    border: 0;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+    z-index: 3;
+    padding: 6px 16px;
+
+    .p-overlaypanel-content {
+      border-radius: 24px;
+      background: #1e1e30;
+      box-shadow: rgb(0 0 0 / 1%) 0px 0px 1px, rgb(0 0 0 / 4%) 0px 4px 8px,
+      rgb(0 0 0 / 4%) 0px 16px 24px, rgb(0 0 0 / 1%) 0px 24px 32px;
+    }
+  }
+
+  .p-button {
+    color: white;
+    background: var(--primary-color);
+    border: 1px solid var(--primary-color);
     border-radius: 100px;
+    padding: 0.75rem 1.25rem;
+    font-size: 1rem;
+    font-weight: 500;
 
-    &:enabled:hover {
-      background: #483a6b;
-      color: white;
-    }
-
-    &:enabled:active {
-      background: #3c3257;
-      color: white;
-    }
-
-    &:enabled:focus {
-      box-shadow: none;
+    .p-button-label {
+      font-weight: 500;
     }
 
     &:disabled {
-      opacity: 0.6;
-    }
-  }
-
-  &:enabled:hover {
-    color: white;
-  }
-
-  &:enabled:active {
-    color: white;
-  }
-
-  &.p-button-primary {
-    position: relative;
-    border-width: 0px;
-    border-radius: 100px;
-    background-image: linear-gradient(90deg, #6e42ca 0%, #8d29c1 100%);
-    z-index: 1;
-
-    &::after {
-      position: absolute;
-      content: '';
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-image: linear-gradient(90deg, #6039b0 0%, #8d29c1 30.44%);
-      z-index: -1;
-      transition: all 0.25s ease-in-out;
-      opacity: 0;
+      opacity: 0.5;
     }
 
-    &::before {
-      position: absolute;
-      content: '';
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-image: linear-gradient(90deg, #8d6ad5 0%, #6f42ca 100%);
-      z-index: -1;
-      transition: all 0.25s ease-in-out;
-      opacity: 0;
+    &.p-button-secondary {
+      background: #43395b;
+      color: white;
+      border-width: 0px;
+      border-radius: 100px;
+
+      &:enabled:hover {
+        background: #483a6b;
+        color: white;
+      }
+
+      &:enabled:active {
+        background: #3c3257;
+        color: white;
+      }
+
+      &:enabled:focus {
+        box-shadow: none;
+      }
+
+      &:disabled {
+        opacity: 0.6;
+      }
     }
 
-    &:active::after {
-      opacity: 1;
+    &:enabled:hover {
+      color: white;
     }
 
-    &:hover::before {
-      opacity: 1;
+    &:enabled:active {
+      color: white;
     }
-  }
 
-  &:enabled:hover {
-    color: white;
-    background-color: #8d6ad5;
-  }
+    &.p-button-primary {
+      position: relative;
+      border-width: 0px;
+      border-radius: 100px;
+      background-image: linear-gradient(90deg, #6e42ca 0%, #8d29c1 100%);
+      z-index: 1;
 
-  &:enabled:active {
-    color: white;
-    background-color: #8d6ad5;
-  }
+      &::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(90deg, #6039b0 0%, #8d29c1 30.44%);
+        z-index: -1;
+        transition: all 0.25s ease-in-out;
+        opacity: 0;
+      }
 
-  &.p-button-warning_custom {
-    background-color: #ee5d0c;
-    background-image: linear-gradient(89.82deg, #e57106 0.08%, #ee5d0c 99.85%);
+      &::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(90deg, #8d6ad5 0%, #6f42ca 100%);
+        z-index: -1;
+        transition: all 0.25s ease-in-out;
+        opacity: 0;
+      }
 
-    &::after {
-      position: absolute;
-      content: '';
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
+      &:active::after {
+        opacity: 1;
+      }
+
+      &:hover::before {
+        opacity: 1;
+      }
+    }
+
+    &:enabled:hover {
+      color: white;
+      background-color: #8d6ad5;
+    }
+
+    &:enabled:active {
+      color: white;
+      background-color: #8d6ad5;
+    }
+
+    &.p-button-warning_custom {
+      background-color: #ee5d0c;
       background-image: linear-gradient(89.82deg, #e57106 0.08%, #ee5d0c 99.85%);
-      z-index: -1;
-      transition: all 0.25s ease-in-out;
-      opacity: 0;
+
+      &::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(89.82deg, #e57106 0.08%, #ee5d0c 99.85%);
+        z-index: -1;
+        transition: all 0.25s ease-in-out;
+        opacity: 0;
+      }
+
+      &::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(89.82deg, #ee5d0c 99.85%, #e57106 0.08%);
+        z-index: -1;
+        transition: all 0.25s ease-in-out;
+        opacity: 0;
+      }
+
+      &:active::after {
+        opacity: 1;
+      }
+
+      &:hover::before {
+        opacity: 1;
+      }
+
+      &:enabled:hover {
+        color: white;
+        background-image: linear-gradient(89.82deg, #ee5d0c 99.85%, #e57106 0.08%);
+      }
+
+      &:enabled:active {
+        color: white;
+        background-image: linear-gradient(89.82deg, #ee5d0c 99.85%, #e57106 0.08%);
+      }
     }
 
-    &::before {
-      position: absolute;
-      content: '';
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-image: linear-gradient(89.82deg, #ee5d0c 99.85%, #e57106 0.08%);
-      z-index: -1;
-      transition: all 0.25s ease-in-out;
-      opacity: 0;
-    }
-
-    &:active::after {
-      opacity: 1;
-    }
-
-    &:hover::before {
-      opacity: 1;
-    }
-
-    &:enabled:hover {
-      color: white;
-      background-image: linear-gradient(89.82deg, #ee5d0c 99.85%, #e57106 0.08%);
-    }
-
-    &:enabled:active {
-      color: white;
-      background-image: linear-gradient(89.82deg, #ee5d0c 99.85%, #e57106 0.08%);
-    }
-  }
-
-  &.p-button-alert {
-    background-color: #C62828;
-    background-image: linear-gradient(89.82deg, #D75050 0.08%, #C62828 99.85%);
-
-    &::after {
-      position: absolute;
-      content: '';
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
+    &.p-button-alert {
+      background-color: #C62828;
       background-image: linear-gradient(89.82deg, #D75050 0.08%, #C62828 99.85%);
-    ;
-      z-index: -1;
-      transition: all 0.25s ease-in-out;
-      opacity: 0;
-    }
 
-    &::before {
-      position: absolute;
-      content: '';
-      top: 0;
-      right: 0;
-      bottom: 0;
-      left: 0;
-      background-image: linear-gradient(89.82deg, #C62828 99.85%, #D75050 0.08%);
-    ;
-      z-index: -1;
-      transition: all 0.25s ease-in-out;
-      opacity: 0;
-    }
+      &::after {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(89.82deg, #D75050 0.08%, #C62828 99.85%);
+      ;
+        z-index: -1;
+        transition: all 0.25s ease-in-out;
+        opacity: 0;
+      }
 
-    &:active::after {
-      opacity: 1;
-    }
+      &::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-image: linear-gradient(89.82deg, #C62828 99.85%, #D75050 0.08%);
+      ;
+        z-index: -1;
+        transition: all 0.25s ease-in-out;
+        opacity: 0;
+      }
 
-    &:hover::before {
-      opacity: 1;
-    }
+      &:active::after {
+        opacity: 1;
+      }
 
-    &:enabled:hover {
-      color: white;
-      background-image: linear-gradient(89.82deg, #C62828 99.85%, #D75050 0.08%);
-    }
+      &:hover::before {
+        opacity: 1;
+      }
 
-    &:enabled:active {
-      color: white;
-      background-image: linear-gradient(89.82deg, #C62828 99.85%, #D75050 0.08%);
+      &:enabled:hover {
+        color: white;
+        background-image: linear-gradient(89.82deg, #C62828 99.85%, #D75050 0.08%);
+      }
+
+      &:enabled:active {
+        color: white;
+        background-image: linear-gradient(89.82deg, #C62828 99.85%, #D75050 0.08%);
+      }
     }
   }
 }
+
+//coin list
+//swap confirm
+//transaction submitted
+//copie
